- have version not in title but hidden it html (2011/06/28 MS)

1.1:
- interface redesigned for better use with mobile devices (2011/06/18 MS)
- separation of interface code and program logic (2011/06/18 MS)
- allow simplified word format for searching (2011/06/16 MS)
- fixed some typos in pali lessons and extended them (2011/06/16 MS)

1.01:
- allow definition of multiple lessons within one file
- organized pali example lessons into two files and fixed some typos

1.0:
- initial public release