@@ -1,3 +1,4 @@
+- have link for search dialog not button (2011/06/29 MS)
 - have version not in title but hidden it html (2011/06/28 MS)
 
 1.1:
